--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: mFilter
 Title: Miscellaneous Time Series Filters
-Date: 2007-10-2
+Date: 2018-09-05
 Version: 0.1-4
 Author: Mehmet Balcilar <mbalcilar@yahoo.com>
 Depends: R (>= 2.2.0), stats
 Suggests: tseries, pastecs, locfit, tseriesChaos, tsDyn,
         forecast
-Description: The package implements several time series filters useful
+Description: Implements several time series filters useful
         for smoothing and extracting trend and cyclical components of a
         time series. The routines are commonly used in economics and
         finance, however they should also be interest to other areas.
